force-app/main/default/objects/Opportunity/fields/Deal_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Deal_Health_Score__c</fullName>
    <label>Deal Health Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>