force-app/main/default/objects/Opportunity/fields/External_Pricing_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>External_Pricing_Last_Run__c</fullName>
    <label>External Pricing Last Run</label>
    <type>DateTime</type>
</CustomField>