force-app/main/default/objects/Opportunity/fields/Simulated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Simulated_Amount__c</fullName>
    <label>Simulated Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>