force-app/main/default/objects/Opportunity/validationRules/OppAmountNotGreaterTahn1000.validationRule-meta.xml
<ValidationRule>
    <fullName>OppAmountNotGreaterTahn1000</fullName>
    <active>false</active>
    <errorConditionFormula>Amount &gt; 1000</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>Amount not greater than 1000</errorMessage>
</ValidationRule>